<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018 The Asus-SDM660 Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Head Title -->
    <string name="nfs_parts_title">NFS Parts</string>
    <string name="nfs_parts_settings_summary">Device Specific Customizations</string>

    <!-- Category -->
    <string name="audio">Audio</string>
    <string name="display">Display</string>

    <string name="advanced_settings">Audio Amplification</string>
    <string name="advanced_summary">Control audio gain</string>

    <!-- Audio amplification -->
    <string name="headphone_gain">Headphone and Speaker gain</string>
    <string name="microphone_gain">Microphone gain</string>

    <!-- Custom seekbar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">Default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong press to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>

    <!-- Clear Speaker -->
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
    <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.</string>
    
    <!-- Dirac settings -->
    <string name="dirac_enable">Use Mi Sound Enhancer</string>
    <string name="dirac_title">Mi Sound</string>
    <string name="dirac_summary">Optimize audio quality</string>
    <string name="dirac_headset_title">Choose headphones type</string>
    <string name="dirac_preset_title">Choose a preset</string>

    <!-- Dirac settings: Headset types -->
    <string name="dirac_headset_default">Default</string>
    <string name="dirac_headset_earbuds">Mi Earbuds</string>
    <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
    <string name="dirac_headset_piston_1">Mi Piston-1</string>
    <string name="dirac_headset_general">General</string>
    <string name="dirac_headset_general_inear">General In-Ear</string>
    <string name="dirac_headset_piston_basic">Basic Edition</string>
    <string name="dirac_headset_piston_2">Mi Piston-2</string>
    <string name="dirac_headset_piston_standard">Standard Edition</string>
    <string name="dirac_headset_headphone">Mi Headphones</string>
    <string name="dirac_headset_piston_youth">Youth Edition</string>
    <string name="dirac_headset_piston_color">Color Edition</string>
    <string name="dirac_headset_in_ear">Mi In-Ear</string>
    <string name="dirac_headset_capsule">Mi Capsule</string>
    <string name="dirac_headset_in_ear_pro">Mi In-Ear Pro</string>
    <string name="dirac_headset_comfort">Mi Comfort</string>
    <string name="dirac_headset_reduction_noise">Mi Noise Cancelling Type-C</string>
    <string name="dirac_headset_cancelling">Mi Noise Cancelling 3.5mm</string>
    <string name="dirac_headset_half_in_ear">Mi Half In-Ear</string>
    <string name="dirac_headset_in_ear2">Mi In-Ear 2</string>
    <string name="dirac_headset_earphone_basic">Mi Earphones Basic</string>
    <string name="dirac_headset_earphone">Mi Earphones</string>

    <!-- Dirac settings: Equalizer presets -->
    <string name="dirac_preset_default">Default</string>
    <string name="dirac_preset_rock">Rock</string>
    <string name="dirac_preset_jazz">Jazz</string>
    <string name="dirac_preset_pop">Pop</string>
    <string name="dirac_preset_classical">Classical</string>
    <string name="dirac_preset_hiphop">Hip Hop</string>
    <string name="dirac_preset_blues">Blues</string>
    <string name="dirac_preset_electronic">Electronic</string>
    <string name="dirac_preset_country">Country</string>
    <string name="dirac_preset_dance">Dance</string>
    <string name="dirac_preset_metal">Metal</string>
    <string name="dirac_preset_bass_booster">Bass Booster</string>

     <!-- QS tile title -->
    <string name="dirac_qs_tile_title">Mi sound</string>

    <!-- Ambient settings -->
    <string name="ambient_enable">Use ambient display</string>

    <!-- Style logo border -->
    <string name="name_of_branding">NFS-Projects™</string>
    <string name="fonts">@font/Virgo</string>
    
    <!-- Vibration -->
    <string name="vibration_title">Vibration Control</string>
    <string name="vibration_override_title">Override System Vibration</string>
    <string name="vibration_strength_title">System Vibration Strength</string>
    <string name="vibration_notification_title">Notification Vibration Strength</string>
    <string name="vibration_call_title">Call Vibration Strength</string>

    <!-- USB fastcharge -->
    <string name="other">Other</string>
    <string name="fastcharge_title">Enable USB Fastcharge</string>
    <string name="fpboost_title">Enable Fingerprint Booster</string>
    <string name="cpuidle_title">Turn Off Cpu Idle</string>
    <string name="fsync_title">Enable Dynamic Fsync</string>
    <string name="fastcharge_summary">Charge upto 900mA when connected to a computer via USB 3.0 port</string>

    <!-- CustomSeekBarPreference -->
    <string name="edit_value">Choose new Value</string>
    <string name="default_value">Default Value</string>
    <string name="edit_hint">Value between %1$d and %2$d</string>

    <!-- Torch -->
    <string name="torch_title">Torch Settings</string>
    <string name="torch_summary">Flashlight white/yellow control</string>
    <string name="yellow_torch_brightness_title">Yellow Torch Brightness</string>
    <string name="white_torch_brightness_title">White Torch Brightness</string>

    <!-- FPS Info -->
    <string name="fps_info_title">FPS Info Overlay</string>
    <string name="fps_info_summary">Show overlay with current frames per second</string>
    
    <!-- xd. About Phone -->
    <string name="xd_device_name">Device name</string>
    <string name="xd_device_name_summary">Redmi 5</string>
    <string name="xd_chipset_type">Chipset</string>
    <string name="xd_chipset_type_summary">Qualcomm Snapdragon™ 450</string>
    <string name="xd_gpu">GPU</string>
    <string name="xd_gpu_summary">Adreno 506</string>
    <string name="xd_camera_mp">Camera</string>
    <string name="xd_camera_mp_summary">12MP+5MP Front Flash Camera</string>
    <string name="xd_screen_type">Screen</string>
    <string name="xd_screen_type_summary">IPS LCD 5.7 INC</string>
    
    <string name="about_anu_title">About Developer</string>
    
    <!-- Kcal settings -->
    <string name="kcal_settings_title">Display colors</string>
    <string name="kcal_settings_summary">Adjust the color of your display</string>
    <string name="kcal_enable_title">Enable display color configuration</string>
    <string name="kcal_enable_summary">Enables the configuration of the display color for a custom adjustment</string>
    <string name="kcal_not_supported">Display color settings is not supported by the kernel</string>
    <string name="red_slider_title">Red</string>
    <string name="green_slider_title">Green</string>
    <string name="blue_slider_title">Blue</string>    
    <string name="kcal_rgb_preference_category_title">RGB</string>
    <string name="kcal_calibration_preference_category_title">Color calibration</string>
    <string name="saturation_slider_title">Saturation</string>
    <string name="reset_default_button_title">Reset to default configuration</string>
    <string name="reset_default_button_summary">Reset all the configurations of this screen</string>
    <string name="contrast_slider_title">Contrast</string>
    
    <string name="other_title">More settings</string>
    <string name="other_summary">Other feature settings by NFS-project™</string>
    
    <!-- HAL3 | HAL1 Switch button profiles -->
    <string name="camera_category">Camera</string>
    <string name="camera_explanation_summary">HAL3 | HAL1 Switch button.</string>
    <string name="camera_title">Camera Mode</string>
    <string name="camera_hal1_summary">HAL1</string>
    <string name="camera_hal3_summary">HAL3</string>
    <string name="camera_hal1_toast_title">Selinux set to Hal1!</string>
    <string name="camera_hal3_toast_title">Selinux set to Hal3!</string>
    <string name="camera_dialogTitle">Select your HAL camera</string>
</resources>
