<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.needforspeed.settings.preferences.SecureSettingListPreference
            android:summary="@string/camera_explanation_summary"
            android:key="camera"
            android:title="@string/camera_title"
            android:summaryOn="@string/camera_hal3_summary"
            android:summaryOff="@string/camera_hal1_summary"
            android:icon="@drawable/ic_cam"
            android:defaultValue="0"
            android:dialogTitle="@string/camera_dialogTitle"
            android:entries="@array/camera_profiles"
            android:entryValues="@array/camera_values" />

        <com.needforspeed.settings.preferences.SecureSettingSwitchPreference
            android:key="fastcharge"
            android:defaultValue="true"
            android:title="@string/fastcharge_title"
            android:icon="@drawable/ic_usb_fastcharge"
            android:summary="@string/fastcharge_summary" />

        <com.needforspeed.settings.preferences.SecureSettingSwitchPreference
            android:key="fpboost"
            android:defaultValue="true"
            android:title="@string/fpboost_title"
            android:icon="@drawable/ic_fpboost" />

        <com.needforspeed.settings.preferences.SecureSettingSwitchPreference
            android:key="fsync"
            android:defaultValue="true"
            android:title="@string/fsync_title"
            android:icon="@drawable/ic_fsync" />

        <com.needforspeed.settings.preferences.SecureSettingSwitchPreference
			android:key="fps_info"
			android:icon="@drawable/ic_fps_info"
			android:title="@string/fps_info_title"
			android:summary="@string/fps_info_summary"
			android:persistent="true"/>

</PreferenceScreen>
