<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    style="@style/xd_pref_card_sin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:gravity="center_vertical"
        android:clipToPadding="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:minHeight="?android:listPreferredItemHeightSmall"
        android:paddingStart="?android:listPreferredItemPaddingStart"
        android:paddingEnd="?android:listPreferredItemPaddingEnd">
        <RelativeLayout
            android:paddingTop="16.0dip"
            android:paddingBottom="16.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:paddingStart="0.0dip"
            android:paddingEnd="16.0dip">
            <TextView
                android:id="@+id/xd_about_phone_header_device"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12.0dip"
                android:text="@string/xd_device_name"
                style="@style/xd_text_primary" />
            <TextView
                android:id="@+id/xd_about_phone_header_device_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12.0dip"
                android:text="@string/xd_device_name_summary"
                android:singleLine="true"
                android:layout_below="@+id/xd_about_phone_header_device"
                android:layout_alignStart="@+id/xd_about_phone_header_device"
                style="@style/xd_text_secondary" />
            <TextView
                android:id="@+id/xd_about_phone_header_chipset"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xd_chipset_type"
                android:layout_below="@+id/xd_about_phone_header_device_desc"
                android:layout_alignStart="@+id/xd_about_phone_header_device_desc"
                style="@style/xd_text_primary" />
            <TextView
                android:id="@+id/xd_about_phone_header_chipset_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12.0dip"
                android:text="@string/xd_chipset_type_summary"
                android:singleLine="true"
                android:layout_below="@+id/xd_about_phone_header_chipset"
                android:layout_alignStart="@+id/xd_about_phone_header_chipset"
                style="@style/xd_text_secondary" />
            <TextView
                android:id="@+id/xd_about_phone_header_gpu"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xd_gpu"
                android:layout_below="@+id/xd_about_phone_header_chipset_desc"
                android:layout_alignStart="@+id/xd_about_phone_header_chipset_desc"
                style="@style/xd_text_primary" />
            <TextView
                android:id="@+id/xd_about_phone_header_gpu_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12.0dip"
                android:text="@string/xd_gpu_summary"
                android:singleLine="true"
                android:layout_below="@+id/xd_about_phone_header_gpu"
                android:layout_alignStart="@+id/xd_about_phone_header_gpu"
                style="@style/xd_text_secondary" />
            <TextView
                android:id="@+id/xd_about_phone_header_camera"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xd_camera_mp"
                android:layout_below="@+id/xd_about_phone_header_gpu_desc"
                android:layout_alignStart="@+id/xd_about_phone_header_gpu_desc"
                style="@style/xd_text_primary" />
            <TextView
                android:id="@+id/xd_about_phone_header_camera_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12.0dip"
                android:text="@string/xd_camera_mp_summary"
                android:singleLine="true"
                android:layout_below="@+id/xd_about_phone_header_camera"
                android:layout_alignStart="@+id/xd_about_phone_header_camera"
                style="@style/xd_text_secondary" />
            <TextView
                android:id="@+id/xd_about_phone_header_screen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xd_screen_type"
                android:layout_below="@+id/xd_about_phone_header_camera_desc"
                android:layout_alignStart="@+id/xd_about_phone_header_camera_desc"
                style="@style/xd_text_primary" />
            <TextView
                android:id="@+id/xd_about_phone_header_screen_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12.0dip"
                android:text="@string/xd_screen_type_summary"
                android:singleLine="true"
                android:layout_below="@+id/xd_about_phone_header_screen"
                android:layout_alignStart="@+id/xd_about_phone_header_screen"
                style="@style/xd_text_secondary" />
        </RelativeLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/xd_about_phone_header_illustration"
            android:layout_width="@dimen/xd_about_phone_ill_width"
            android:layout_height="@dimen/xd_about_phone_ill_height"
            app:cardElevation="0dp"
            app:cardCornerRadius="18dp">
            <com.needforspeed.settings.preferences.xdCardPrefWall
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scaleType="centerCrop"
                android:elevation="0.0dip" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</FrameLayout>